style: Fix record misalignment padding (#2177)

--- a/src/app/record/components/record-header/record-header.component.scss
+++ b/src/app/record/components/record-header/record-header.component.scss
@@ -2,13 +2,14 @@
   display: flex;
   box-sizing: border-box;
   width: 100%;
-  padding: 32px 16px;
+  padding: 32px 0;
   margin-bottom: 32px;
   align-items: flex-start;
   word-break: break-all;
 
   .record-header {
     gap: 16px;
+    padding: 0 16px;
 
     h1,
     p {
